<resources>
    <string name="app_name">CharS</string>
    <string name="Execute">Выполнить</string>
    <string name="OperationMode">Режимы работы</string>
    <string name="InsertMode">Вставка</string>
    <string name="ExtractionMode">Извлечение</string>
    <string name="ContainerText">Текст-контейнер</string>
    <string name="MessageText">Секретное сообщение</string>
    <string name="KeyText">Ключ шифрования</string>
    <string name="EncodingMode">Режимы работы</string>
    <string name="StandardMode">Стандартный режим</string>
    <string name="MaxCapacityMode">Режим максимальной вместимости</string>
    <string name="InsertOnlyMode">Только алгоритм вставки</string>
    <string name="ReplaceOnlyMode">Только алгоритм замены</string>
    <string name="ResultText">Результат</string>
    <string name="EmptySendMessage">Вы не можете отправить пустое сообщение</string>
    <string name="EmptyEncodingMode">Выберите режим работы алгоритма</string>
    <string name="EmptyOperationMode">Выберите нужную операцию</string>
    <string name="NotFormalKey">Ключ должен состоять из восьми чисел</string>
    <string name="Error">Что-то пошло не так</string>
    <string name="InvalidChecksum">Контрольная сумма неверна</string>
    <string name="TooSmallContainer">Слишком маленький контейнер</string>
</resources>